--- a/RiskofRain2Database/pom.xml
+++ b/RiskofRain2Database/pom.xml
@@ -20,4 +20,11 @@
             </resource>
         </resources>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
 </project>
