--- a/RiskofRain2Database/pom.xml
+++ b/RiskofRain2Database/pom.xml
@@ -16,6 +16,7 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>*.png</include>
+                    <include>*.txt</include>
                 </includes>
             </resource>
         </resources>
