--- a/RiskofRain2Database/pom.xml
+++ b/RiskofRain2Database/pom.xml
@@ -17,6 +17,7 @@
                 <includes>
                     <include>*.png</include>
                     <include>*.txt</include>
+                    <include>*.json</include>
                 </includes>
             </resource>
         </resources>
